# ws

./: .env  Cargo.toml
src/: main.rs
webapp/: Cargo.toml
webapp/src/: errors.rs  handlers.rs  main.rs  models.rs  routers.rs
webservice/: .env  Cargo.toml
webservice/src/: errors.rs  handlers.rs  main.rs  models.rs  routers.rs  state.rs
webservice/src/dbaccess/: course.rs  teacher.rs
webservice/src/handlers/: course.rs  general.rs  mod.rs  teachers.rs
webservice/src/models/: course.rs  teacher.rs
