[package]
name = "webservice"
version = "0.1.0"
edition = "2021"
default-run = "teacher-service"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.6.0"
actix-web = "4.9.0"
chrono = { version = "0.4.19", features = ["serde"] }
dotenv = "0.15.0"
# ssl windows中不一定好使
#openssl = {version = "0.10.38",features = ["derive"]}
sqlx = { version = "0.8.2", features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono",
] }
serde = { version = "1.0.215", features = ["derive"] }

[[bin]]
name ="server1"

[[bin]]
name = "teacher-service"